Edited the project title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="bg-dark text-white h1 py-3 mb-5">
         <div class="container">
-            Task Tracker
+            Task Tracker Application
         </div>
     </header>
 
